[gd_scene load_steps=7 format=2]

[ext_resource path="res://assests/dog.png" type="Texture" id=1]
[ext_resource path="res://assests/cat.png" type="Texture" id=2]
[ext_resource path="res://assests/board.png" type="Texture" id=3]
[ext_resource path="res://TextureRect.gd" type="Script" id=4]
[ext_resource path="res://font/Abrushow-ALwDD.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 10
font_data = ExtResource( 5 )

[node name="StartScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 481.0
rect_scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="catto" type="TextureRect" parent="."]
margin_left = 66.0398
margin_top = 183.0
margin_right = 393.04
margin_bottom = 330.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doggo" type="TextureRect" parent="."]
margin_left = 510.556
margin_top = 185.96
margin_right = 837.556
margin_bottom = 328.96
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 190.643
margin_top = 418.141
margin_right = 758.643
margin_bottom = 520.141
custom_fonts/font = SubResource( 1 )
text = "single player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friends" type="Button" parent="."]
margin_left = 120.361
margin_top = 555.48
margin_right = 820.361
margin_bottom = 654.48
custom_fonts/font = SubResource( 1 )
text = "play with friends"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cat" type="TextureButton" parent="."]
visible = false
margin_left = 46.1179
margin_top = 287.914
margin_right = 448.118
margin_bottom = 477.914
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dog" type="TextureButton" parent="."]
visible = false
margin_left = 509.467
margin_top = 290.589
margin_right = 911.469
margin_bottom = 480.589
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose" type="Label" parent="."]
visible = false
margin_left = 18.7864
margin_top = 54.7965
margin_right = 942.785
margin_bottom = 202.797
custom_fonts/font = SubResource( 1 )
text = "choose charecter"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Friends" to="." method="_on_Friends_pressed"]
[connection signal="pressed" from="cat" to="." method="_on_cat_pressed"]
[connection signal="pressed" from="dog" to="." method="_on_dog_pressed"]
